# cfbd-pipeline

./: README.md  databricks.yml  pyproject.toml  setup.py
bundles/dev/: bundle.yml
notebooks/: flatten_and_write.ipynb  flatten_and_write.py  ingest_cfbd.ipynb  ingest_cfbd.py  scratch.ipynb
src/cfbd/: __init__.py  bronze.py  cli.py  endpoints.py  http_connector.py  jobs.py  silver.py
src/cfbd.egg-info/: PKG-INFO  SOURCES.txt
src/cfbd_helper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cfbd_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
