[project]
name = "cfbd-pipeline"
version = "0.1.0"
description = "Databricks pipeline for College Football Data ingestion and transforms"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "pyspark>=3.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
